<resources>
    <string name="app_name">Enrollee</string>

    <string name="textViewChooseUniversityUniversityActivity">Please, choose university</string>
    <string name="headTextAboutUniversityActivity">Information about University</string>
    <string name="SearchTopLevelActivity">Search</string>
    <string name="textButton2017YearTopLevelActivity">2017 year</string>
    <string name="textButton2016YearTopLevelActivity">2016 year</string>
    <string name="textButton2015YearTopLevelActivity">2015 year</string>
    <string name="textAboutUniversityPageActivity">About University</string>
    <string name="textFullTimeFormUniversityPageActivity">Full Time Form</string>
    <string name="textExternalFormUniversityPageActivity">External Form</string>
    <string name="chooseCityMainActivity">Please, choose city</string>
    <string name="textChooseDegreeTimeFormPageActivity">Choose Degree</string>
    <string name="textBachelorDegreeTimeFormPageActivity">Bachelor</string>
    <string name="textSpecialistDegreeTimeFormPageActivity">Specialist</string>
    <string name="textMasterDegreeTimeFormPageActivity">Master</string>
    <string name="textJuniorSpecialistDegreeTimeFormPageActivity">Junior Specialist</string>
    <string name="textResourceLoading">Loading…</string>
    <string name="error">Error</string>
    <string name="textMsgIsEmpty">" is empty."</string>
    <string name="textChooseYouUniversity">Please, choose university</string>
    <string name="connection_error">Connection error</string>

              <!--Material Drawer Text-->
    <string name="action_settings">Settings</string>
    <string name="drawer_item_favorite">Favorite</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

              <!--My Text-->
    <string name="share">Share</string>
    <string name="writeToUs">Write to us</string>
    <string name="estimate">Estimate</string>
    <string name="aboutProject">About project</string>
    <string name="others">Others</string>
    <string name="recommendations">Recommendations</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="favorite">Favorite</string>
    <string name="text_choose_category">Choose category</string>
    <string name="textInfoForApplicant">Info for applicant</string>
    <string name="textImportantInfoForApplicant2017"> \t Currently the site is not yet prepared vstupInfo data.
        \tWe will notify you as soon as the first information will appear on the site vstupInfo.
        \tYou can read the terms of admission to universities in 2017.</string>
    <string name="textViewConventionsBottomSheet">Conventions</string>
    <string name="textLegend">Legend</string>
    <string name="textEmptyData">Data is empty</string>
    <string name="textNOInternetConnection">No internet connection</string>
    <string name="textBadInternetConnection">Bad internet connection!</string>
    <string name="textHintSearchCity">Enter the city</string>
    <string name="textAddToFavorite">Add to favorite</string>
    <string name="textProblemsWithgettingData">Problems with getting data</string>
    <string name="title_text_add_to_favorite">Add to favorite</string>
    <string name="textTitleCities">Cities</string>
    <string name="textCities">Cities</string>
    <string name="textUniversities">Universities</string>
    <string name="textSpecialities">Specialities</string>
    <string name="textArchive">Archive</string>
    <string name="textHintSearchCities">Search City</string>
    <string name="textHintSearchUniversity">Search University</string>
    <string name="textHintSearchEnrollee">Search enrollee</string>
    <string name="textExams">Exams</string>
    <string name="textExamsArray">Exams</string>
    <string name="textHintSearchSpecialty">Search specialty</string>
    <string name="textThisfunctionWillBeAddedSoon">This function will be added soon.</string>
</resources>


