<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:padding="16dp"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewChooseDegreeTimeFormPageActivity"
        android:text="@string/textChooseDegreeTimeFormPageActivity"
        style="@style/headTextViewStyle"/>

    <Button
        android:id="@+id/buttonBachelorDegreeTimeFormPageActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBachelorDegreeTimeFormPageActivity"
        style="@style/ButtonTopLevelActivityStyle"/>

    <Button
        style="@style/ButtonTopLevelActivityStyle"
        android:id="@+id/buttonSpecialistDegreeTimeFormPageActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSpecialistDegreeTimeFormPageActivity"/>

    <Button
        style="@style/ButtonTopLevelActivityStyle"
        android:id="@+id/buttonJuniorSpecialistDegreeTimeFormPageActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textJuniorSpecialistDegreeTimeFormPageActivity"/>

    <Button
        style="@style/ButtonTopLevelActivityStyle"
        android:id="@+id/buttonMasterDegreeTimeFormPageActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textMasterDegreeTimeFormPageActivity"/>

</LinearLayout>