<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <EditText
        android:id="@+id/editTextSearchTopLevelActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SearchTopLevelActivity"

        />

    <Button
        android:id="@+id/button2017YearTopLevelActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textButton2017YearTopLevelActivity"
        style="@style/ButtonTopLevelActivityStyle"

        />

    <Button
        style="@style/ButtonTopLevelActivityStyle"
        android:id="@+id/button2016YearTopLevelActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textButton2016YearTopLevelActivity"/>

    <Button
        style="@style/ButtonTopLevelActivityStyle"
        android:id="@+id/button2015YearTopLevelActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textButton2015YearTopLevelActivity"/>

</LinearLayout>