<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewNameOfUniversityPageActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/headTextViewStyle"/>

    <Button
        android:id="@+id/buttonAboutUniversityPageActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAboutUniversityPageActivity"
        style="@style/ButtonTopLevelActivityStyle"/>

    <Button
        style="@style/ButtonTopLevelActivityStyle"
        android:id="@+id/buttonFullTimeFormUniversityPageActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textFullTimeFormUniversityPageActivity"/>

    <Button
        style="@style/ButtonTopLevelActivityStyle"
        android:id="@+id/buttonExternalFormUniversityPageActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textExternalFormUniversityPageActivity"/>

</LinearLayout>